@@ -58,7 +58,7 @@ TERMFLAGS = -DDJSVGA # -fno-inline-functions
 # HBB : added $(OPTS) so user can
 #   change CFLAGS easily, without having to change makefile
 CFLAGS = -DMSDOS -DDOS32 \
-	-DANSI_C -DSTDC_HEADERS \
+	-DANSI_C -DSTDC_HEADERS -DHAVE_TIME_H -DHAVE_TIME_T_IN_TIME_H \
 	-DHAVE_VALUES_H -DHAVE_UNISTD_H -DRETSIGTYPE=void \
 	-DHAVE_ERF -DHAVE_LGAMMA -DHAVE_GAMMA \
 	-DHAVE_GETCWD -DHAVE_SETLINEBUF -DHAVE_SLEEP \
